# Maze

./: .gitignore  MANIFEST.in  README.md  __init__.py  cli.py  main.py  pyproject.toml  pytest.ini  requirements.in  requirements.txt
agent/: dag_agent.py  decorators.py  graph.py
config/: config.toml
core/learn/: exec_time_pred.py
core/path/: dag_context.py  daps.py  task_dispatcher.py  task_status_manager.py
core/register/: task_registry.py
core/worker/: executor.py  monitor_actor.py  resource_manager.py
data/openagi/document_qa/: split_task.py
data/openagi/image_captioning_complex/: split_task.py
data/openagi/text_processing_multilingual/: split_task.py
examples/multimodel_create_workflow/: main.py
maze/cli/: cli.py
maze/client/front/: client.py  decorator.py  file_utils.py  server_workflow.py  workflow.py
maze/client/langgraph/: client.py
maze/client/maze/: README.md  client.py  decorator.py  workflow.py
maze/core/: server.py
maze/core/path/: path.py  resource_manager.py  runner.py  scheduler.py  view.py
maze/core/scheduler/: resource.py  runner.py  runtime.py  scheduler.py
maze/core/worker/: worker.py
maze/core/workflow/: task.py  workflow.py
maze/utils/: utils.py
runtime_artifacts/results/: task_exec_time.csv
src/agentos/: __init__.py
test/: README.md  api_test.py  test_langgraph.py  test_maclient_builtin.py  test_maclient_userdef.py
test/original/: api_test.py  simple_api_test.py  test.py  test_langgraph.py  user_upload_task_test.py
utils/: execution_backend.py  list_files.py  log_config.py
(+821 files in other folders)
