[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "maze-agent"
version = "1.0.0"
description = "A unified command-line interface for launching the Maze system."
authors = [{ name = "Your Name", email = "your.email@example.com" }]
requires-python = ">=3.10"

# 请将您项目 requirements.txt 中的所有依赖项添加到这里
dependencies = [
    "ray[serve]",
    "redis",
    "flask",
    "click",
    "cloudpickle",
    "requests",
    "networkx",
    "numpy",
    "pandas",
    "scikit-learn",
    "xgboost"
]

# [project.scripts] 是最关键的部分
# 它定义了我们的命令行工具
[project.scripts]
maze_agent = "maze_cli.cli:cli"